<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/clientCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="3pt"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="3pt"
    app:cardElevation="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:id="@+id/imageview"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="start|center_vertical"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/user_icon"
            app:srcCompat="@drawable/ic_baseline_account_circle_24" />

        <LinearLayout
            android:layout_width="284dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/name"
                android:textSize="10pt"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/latTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lat"
                    android:layout_marginEnd="5pt"
                    android:layout_weight="1"
                    android:textSize="6pt" />

                <TextView
                    android:id="@+id/lngTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/lng"
                    android:textSize="6pt" />


            </LinearLayout>

        </LinearLayout>

        <ImageButton
            android:id="@+id/closeButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:contentDescription="@string/close_icon"
            android:freezesText="false"
            android:isScrollContainer="false"
            app:srcCompat="@drawable/ic_baseline_close_24" />

    </LinearLayout>

</androidx.cardview.widget.CardView>